; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/cmdutils/schtasks/extr_schtasks.c_get_registered_task.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/cmdutils/schtasks/extr_schtasks.c_get_registered_task.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [22 x i8] c"GetTask failed: %08x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @get_registered_task to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_registered_task(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %8 = call i32* (...) @get_tasks_root_folder()
  store i32* %8, i32** %5, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %30

12:                                               ; preds = %1
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @SysAllocString(i32* %13)
  store i32 %14, i32* %6, align 4
  %15 = load i32*, i32** %5, align 8
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @ITaskFolder_GetTask(i32* %15, i32 %16, i32** %4)
  store i32 %17, i32* %7, align 4
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @SysFreeString(i32 %18)
  %20 = load i32*, i32** %5, align 8
  %21 = call i32 @ITaskFolder_Release(i32* %20)
  %22 = load i32, i32* %7, align 4
  %23 = call i64 @FAILED(i32 %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %12
  %26 = load i32, i32* %7, align 4
  %27 = call i32 @FIXME(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 %26)
  store i32* null, i32** %2, align 8
  br label %30

28:                                               ; preds = %12
  %29 = load i32*, i32** %4, align 8
  store i32* %29, i32** %2, align 8
  br label %30

30:                                               ; preds = %28, %25, %11
  %31 = load i32*, i32** %2, align 8
  ret i32* %31
}

declare dso_local i32* @get_tasks_root_folder(...) #1

declare dso_local i32 @SysAllocString(i32*) #1

declare dso_local i32 @ITaskFolder_GetTask(i32*, i32, i32**) #1

declare dso_local i32 @SysFreeString(i32) #1

declare dso_local i32 @ITaskFolder_Release(i32*) #1

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32 @FIXME(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
